CMAPI-23# re-factor to remove ascent, cache name prefix